updated gallery layout

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </article>
 
 
-<article id="projects">
+<!-- <article id="projects">
   <h2 class="major">Projects</h2>
 <div class="grid">
   <img src="/images/projects/brown1.jpg" style="width:400px;height:400px;">
@@ -69,7 +69,29 @@
   <img src="/images/projects/tilson1.jpg" style="width:400px;height:400px;">
   <img src="/images/projects/tilson3.jpg" style="width:400px;height:400px;">
 </div>
-</article> 
+</article>  -->
+
+<article id="projects">
+  <h2 class="major">Projects</h2>
+  <div class="container">
+<div class= "main-img">
+  <img src="/images/projects/brown1.jpg" id="current">
+</div>
+
+<div class="imgs">
+<img src="/images/projects/brown1.jpg" >
+  <img src="/images/projects/brown2.jpg">
+  <img src="/images/projects/brown3.jpg">
+  <img src="/images/projects/byrd1.jpg">
+  <img src="/images/projects/kv.jpg">
+  <img src="/images/projects/kv1.jpg">
+  <img src="/images/projects/kv3.jpg">
+  <img src="/images/projects/ottmud.jpg">
+  <img src="/images/projects/tilson1.jpg">
+  <img src="/images/projects/tilson3.jpg">
+  </div>
+  </div>
+</article>  
        
         <!-- Contact -->
         <article id="contact">
