added more pics

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
   <img src="/images/projects/ottmud.jpg">
   <img src="/images/projects/tilson1.jpg">
   <img src="/images/projects/tilson3.jpg">
+  <img src="/images/projects/Small 1.jpeg">
+  <img src="/images/projects/Small 2.jpeg">
+  <img src="/images/projects/Small 3.jpeg">
   </div>
   </div>
 </article>  
