change order of pics removed backslash after src to see if pics will load from github

--- a/index.html
+++ b/index.html
@@ -61,25 +61,26 @@
   <h2 class="major">Projects</h2>
   <div class="container">
 <div class= "main-img">
-  <img src="/images/projects/brown1.jpg" id="current" style="height: 480px;">
+  <img src="images/projects/tilson1.jpg" id="current" style="height: 480px;">
 </div>
 
 <div class="imgs">
-<img src="/images/projects/brown1.jpg" >
-  <img src="/images/projects/brown2.jpg">
-  <img src="/images/projects/brown3.jpg">
-  <!-- <img src="/images/projects/brown3resized.jpg"> -->
-  <img src="/images/projects/byrd1.jpg">
-  <img src="/images/projects/kv.jpg">
-  <img src="/images/projects/kv1.jpg">
-  <img src="/images/projects/kv3.jpg">
+  <img src="images/projects/tilson1.jpg">
+  <img src="images/projects/tilson3.jpg">
+   <img src="images/projects/kv.jpg">
+  <img src="images/projects/kv1.jpg">
+  <img src="images/projects/kv3.jpg">
+<img src="images/projects/byrd1.jpg"> 
+<img src="images/projects/small1.jpg">  
+  <img src="images/projects/small2.jpg">
+  <img src="images/projects/small3.jpg">
+<img src="images/projects/brown1.jpg" >
+  <img src="images/projects/brown2.jpg">
+  <img src="images/projects/brown3.jpg">
+  <!-- <img src="/images/projects/brown3resized.jpg"> --> 
   <img src="/images/projects/ottmud.jpg">
-  <img src="/images/projects/tilson1.jpg">
-  <img src="/images/projects/tilson3.jpg">
-  <img src="/images/projects/Small 1.jpeg">
-  <img src="/images/projects/Small 2.jpeg">
-  <img src="/images/projects/Small 3.jpeg">
-  </div>
+  
+   </div>
   </div>
 </article>  
        
