removed backslash from last pic, missed it, all other images displaying on github

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <img src="images/projects/brown2.jpg">
   <img src="images/projects/brown3.jpg">
   <!-- <img src="/images/projects/brown3resized.jpg"> --> 
-  <img src="/images/projects/ottmud.jpg">
+  <img src="images/projects/ottmud.jpg">
   
    </div>
   </div>
