2 shades darker on font

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
        
   <!-- Contact -->
         <article id="contact">
-          <h2 class="major" id="contact"><i>Contact me & we can talk about your project.</i> </h2>
+          <h2 class="major">Contact</h2>
           
           <p>            
           <ul id="contact">
@@ -165,7 +165,7 @@
             <li>Phone: <a href="tel:9137454448">913-745-4448</a> </li>
             <li>Email: <a href="mailto:designerkm@outlook.com">designerkm@outlook.com</a></li>
           <li>Available Monday - Friday, 9:30 am - 5:00 pm CST <br>Or By Appointment </li>
-          </ul>
+                </ul>
          </p>  
          <p style="text-align:center"><i>
            Let's make something beautiful together!
