corrected grammar under design services

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </p>
 
           <p>
-          Call me today and we will start moving your from project from ideas to reality! 
+          Call me today and we will start moving your project from ideas to reality! 
           </p>
           
           <p style="text-align:center; font-weight: bold;"><i>
